fix Handheld on Opera Mobile - don't apply the wider spacing added for touch devices
git-svn-id: file:///home/awy/mirror/slim/7.6/trunk/server@30866 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Handheld/slimserver.css
+++ b/HTML/Handheld/slimserver.css
@@ -173,7 +173,7 @@ div.fileselectorautocomplete ul li {
 }
 
 /* add a few optimizations for iThingy browsers */
-@media screen and (max-device-width: 480px) { 
+@media screen and (max-device-width: 480px) and (min-device-width: 320px) { 
 	.menuitem {
 		padding-top: 5px;
 		padding-bottom: 5px;
